--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kuwawaru",
   "version": "1.0.0",
-  "description": "",
+  "description": "Blockchain App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Shravan",
   "license": "ISC",
   "dependencies": {
     "sha256": "^0.2.0"
