--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nodemon": "^1.18.3",
+    "request-promise": "^4.2.2",
     "sha256": "^0.2.0",
     "uuid": "^3.3.2"
   }
